# ServiceNow-Knowledge-Builder

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: README.md  default.json
docs/: README.md
docs/adr/: 0001-project-scaffolding.md  0002-ui-manager.md  0003-cli-presentation-layer.md  0004-browser-manager.md  0005-session-manager.md  0006-navigation-recorder.md  0007-element-recorder.md  0008-selector-analyzer.md  0009-screenshot-engine.md  0010-export-engine.md  0011-log-engine.md  0012-application-controller.md  0013-browser-data-collector.md  0014-session-discovery.md  0015-configuration-manager.md
docs/architecture/: README.md
docs/module-specs/: README.md
docs/prompts/: 2026-07-16-code-review-cli-adequacao.md
examples/: README.md
schemas/: README.md  manifest.schema.json  navigation.schema.json  page.schema.json  screenshots.schema.json  selectors.schema.json  session.schema.json  statistics.schema.json
scripts/: README.md
src/snkb/: __init__.py  bootstrap.py
src/snkb/application/: __init__.py
src/snkb/application/commands/: __init__.py  command_handler_port.py  commands.py
src/snkb/application/ports/: __init__.py  browser_data_collector_port.py  browser_manager_port.py  configuration_provider_port.py  element_recorder_port.py  event_publisher_port.py  export_engine_port.py  folder_opener_port.py  log_engine_port.py  log_reader_port.py  navigation_recorder_port.py  screenshot_engine_port.py  selector_analyzer_port.py  session_discovery_port.py  session_manager_port.py
src/snkb/application/queries/: __init__.py  queries.py
src/snkb/application/services/: __init__.py  application_controller.py  application_controller_port.py
src/snkb/domain/: __init__.py
src/snkb/domain/entities/: __init__.py  element.py  frame.py  navigation_edge.py  page.py  screenshot.py  (+2 more)
src/snkb/infrastructure/: __init__.py
src/snkb/modules/: __init__.py
src/snkb/presentation/: __init__.py  contracts.py  main_window.py  state.py  state_machine.py  status_aggregator.py  ui_event_queue.py  view_models.py
src/snkb/shared/: __init__.py
tests/: conftest.py
tests/acceptance/: README.md  test_local_recording_flow.py
tests/contract/: test_ports.py
tests/integration/: README.md  test_application_controller_integration.py  test_browser_data_collector_integration.py  test_browser_manager_integration.py  test_main_window_smoke.py
tests/unit/: test_bootstrap.py  test_no_gui_dependency.py
tests/unit/application/: test_commands.py
tests/unit/domain/: test_entities.py  test_events.py  test_exceptions.py  test_system_events.py  test_value_objects.py
tests/unit/presentation/: test_state_machine.py  test_status_aggregator.py  test_ui_event_queue.py
tests/unit/shared/: test_app_config.py  test_session_json.py
(+122 files in other folders)
