[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "servicenow-knowledge-builder"
version = "0.1.0"
description = "CLI que observa uma sessão autenticada do ServiceNow e produz uma Knowledge Base estruturada e reutilizável para o futuro QA ServiceNow Assistant."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Crystiane Madeira de Mello" }]

dependencies = [
    "playwright>=1.45",
    "typer>=0.12",
    "pydantic>=2.7",
    "orjson>=3.10",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
]

[project.scripts]
snkb = "snkb.presentation.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C90"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["snkb"]
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/snkb"]
